--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tabler/icons-react": "^3.34.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.10.0",
     "framer-motion": "^12.19.1",
     "lucide-react": "^0.523.0",
     "motion": "^12.19.2",
